# udisks2-qt6

./: CMakeLists.txt  README.md  README.zh_CN.md  dblockdevice.cpp  dblockpartition.cpp  ddiskdevice.cpp  ddiskmanager.cpp  dudisksjob.cpp  udisks2-qt6.pc.in  udisks2-qt6Config.cmake.in  udisks2_dbus_common.cpp
.reuse/: dep5
archlinux/: PKGBUILD
debian/: changelog  control  copyright  libudisks2-qt6-dev.install  libudisks2-qt6.install  rules
rpm/: udisks2-qt6.spec
